# parc

./: 404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main-dev.yml
demos/: default.py  list_units.py
docs/: index.md  modules.md
modules/: index.html
parc/: __init__.py
parc/configs/: __init__.py
parc/configs/edf/: __init__.py  constants.py  france.py  types.py
parc/configs/edf/sites/nuc/: __init__.py  belleville.py  blayais.py  bugey.py  cattenom.py  chinon.py  chooz.py  civaux.py  cruas.py  dam.py  dampierre.py  fla.py  flamanville.py  golfech.py  gra.py  gravelines.py  nogent.py  paluel.py  penly.py  saint_alban.py  saint_laurent.py  tricastin.py
parc/configs/endesa/: README.md
parc/constants/: __init__.py  constants.py
parc/demos/: list_units.py
parc/naming/: README.md
parc/naming/ecs/: __init__.py  ecs.py
parc/technologies/nuc/: __init__.py  unit.py
parc/technologies/thermal/: unit.py
parc/types/: __init__.py  grid.py  site.py  unit.py
parc/types/errors/: __init__.py  setting_errors.py
search/: search_index.json
tests/: test_configs.py  test_errors.py  test_foo.py  test_naming.py  test_types.py
