[tool.poetry]
name = "parc"
version = "0.1.0"
description = ""
authors = ["Joris GUERRY <joris.guerry@edf.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
